[package]
name = "carmen-core"
version = "0.1.0"
authors = ["Andrew Pendleton <andrew@mapbox.com>"]
edition = "2018"

[lib]
path = "rust-src/src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
morton = { git = "https://github.com/apendleton/morton.git", rev = "d892e8f2759aa2de29629232946db47924f1802e" }
itertools = "0.8"
flatbuffers = { git = "https://github.com/TethysSvensson/flatbuffers.git", rev = "c330fcc941aacbe23e076589c5afbdb6504ceba6" }
byteorder = "1.3"

[dev-dependencies]
tempfile = "3.0"

[dependencies.rocksdb]
git = "https://github.com/apendleton/rust-rocksdb.git"
rev = "f6a9d278262f090790578dbf435e591748c4622e"
default-features = false
features = []
