[package]
name = "carmen-core"
version = "0.1.0"
authors = ["Andrew Pendleton <andrew@mapbox.com>"]
edition = "2018"

[lib]
path = "rust-src/src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# use https://github.com/apendleton/morton/tree/modernize because upstream
# doesn't work on rust stable
morton = { git = "https://github.com/apendleton/morton.git", rev = "d892e8f2759aa2de29629232946db47924f1802e" }
itertools = "0.8"
# using this fork until https://github.com/google/flatbuffers/pull/5166 lands
flatbuffers = { git = "https://github.com/TethysSvensson/flatbuffers.git", rev = "c330fcc941aacbe23e076589c5afbdb6504ceba6" }
byteorder = "1.3"
ordered-float = "1.0"
failure = "0.1.5"

[dev-dependencies]
tempfile = "3.0"

# we're using a forked rocksdb for now because upstream rust-rocksdb doesn't yet
# support read-only opens; can switch back to upstream once
# https://github.com/rust-rocksdb/rust-rocksdb/pull/268 lands
[dependencies.rocksdb]
git = "https://github.com/apendleton/rust-rocksdb.git"
rev = "f6a9d278262f090790578dbf435e591748c4622e"
default-features = false
features = []
