[package]
name = "carmen-core"
version = "0.1.0"
authors = ["Andrew Pendleton <andrew@mapbox.com>"]
edition = "2018"

[lib]
path = "rust-src/src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
min-max-heap = { git = "https://github.com/apendleton/min-max-heap-rs.git", rev = "1077ab489bbc0ecc994a14990746b76d635626b3" }
# use https://github.com/apendleton/morton/tree/modernize because upstream
# doesn't work on rust stable
morton = { git = "https://github.com/apendleton/morton.git", rev = "d892e8f2759aa2de29629232946db47924f1802e" }
integer-encoding = "1.0"
itertools = "0.8"
byteorder = "1.3"
ordered-float = "1.0"
failure = "0.1.5"
smallvec = "0.6.10"

[dev-dependencies]
tempfile = "3.0"
test_utils = { path = "test_utils" }
criterion = "0.2"
lz4 = "1.23.1"
once_cell = "0.2.3"
serde_json = "1.0"

[[bench]]
name = "benchmarks"
harness = false

# we're using a forked rocksdb for now because upstream rust-rocksdb doesn't yet
# support read-only opens; can switch back to upstream once
# https://github.com/rust-rocksdb/rust-rocksdb/pull/268 lands
[dependencies.rocksdb]
git = "https://github.com/CyanRook/rust-rocksdb.git"
rev = "37434845f07d8745a9ff51f278c0e91ed39b9e58"
default-features = false
features = ["lz4"]
