[package]
name = "carmen-core"
version = "0.1.0"
authors = ["Andrew Pendleton <andrew@mapbox.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
morton = { git = "https://github.com/apendleton/morton.git", rev = "d892e8f2759aa2de29629232946db47924f1802e" }
itertools = "0.8"
flatbuffers = "0.5"
byteorder = "1.3"

[dev-dependencies]
tempfile = "3.0"

[dependencies.rocksdb]
version = "0.12"
default-features = false
features = []
