[package]
name = "test_utils"
version = "0.1.0"
authors = ["Natalia Margolis <natalia.margolis@mapbox.com>"]
edition = "2018"

[dependencies]
tempfile = "3.0"
carmen-core = { path = "../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"

[[bin]]
name = "dump_store"
path = "src/dump.rs"

[[bin]]
name = "load_store"
path = "src/load.rs"